# pack-trip

./: .gitignore  .replit  README.md  dev.py  external_api.json  package-lock.json  package.json  pyproject.toml  replit.md  run_backend.py  run_dev.py  start_fastapi.py  test_backend.py  test_detailed_planner.py  test_extractor.py  test_trip_planner.py  vite.config.ts
.cursor/rules/: my-rules.mdc
attached_assets/: Pasted--File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-sqlalchemy-sql-elements-py--1751852123446_1751852123447.txt  Pasted-PackTrip-AI-UI-Requirements-Document-PackTrip-AI-the-first-group-travel-concierge-that-hears-ev-1751801947750_1751801947751.txt  Pasted-Warning-Encountered-two-children-with-the-same-key-x60-1-x60-Keys-should-be-unique-so-that-co-1751895707721_1751895707722.txt  content-1751808242752.md  content-1751808263316.md
backend/: ai_agent.py  database.py  detailed_planner.py  main.py  models.py  schemas.py  trip_planner.py
client/src/: App.tsx  index.css
client/src/components/chat/: CalendarMatrix.tsx  ChatMessage.tsx  ConflictBanner.tsx  ContextDrawer.tsx  DetailedPlanCard.tsx  ItineraryCard.tsx  LogisticsPlanCard.tsx  MapView.tsx  MessageInput.tsx  PreferencesDialog.tsx  QuickVoteChips.tsx
client/src/hooks/: useTripState.ts  useWebSocket.ts
client/src/lib/: ai-image-generator.ts
client/src/pages/: chat.tsx  join.tsx  landing.tsx
client/src/types/: images.d.ts  trip.ts
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
